# Product-Evolution-Agents

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
data/demo_kb/: existing_requirements.md  feedback.csv  issues_mock.json  product.yaml  repo_map.md
docs/: EvoPM_Demo_MVP_PRD_V1.0.md  design_handoff_demo.md  design_handoff_product.md  frontend_api.md  frontend_demo_ui.md  frontend_product_ui.md  plan.md  spec.md  tasks.md
docs/assets/: README.md
docs/claude_design/: README.md
docs/sample_reports/: README.md
docs/submission/: EvoPM_Agent_项目文档.pptx  build_deck.js  演示视频_TTS逐字稿.md  演示视频脚本.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend-product/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend-product/src/: App.tsx  index.css
frontend/design-reference/: EvoPM Pipeline Observatory.dc.html  HANDOFF-README.md  design-chat.md
frontend/src/: App.tsx  index.css  main.tsx
src/evopm/: __init__.py  cli.py  config.py  graph.py  hitl.py  llm.py  rules.py  schemas.py  server.py  state.py
tests/: conftest.py  test_critic.py  test_discovery.py  test_engineering.py  test_enrich.py  test_evidence_refs.py  test_gate_rule.py  test_github.py  test_hitl.py  test_intake.py  test_llm_retry.py  test_opportunity.py  test_render.py  test_requirement.py  test_research_competitor.py  test_research_degrade.py  test_research_tech.py  test_risk_tier.py  test_smoke.py  test_strategy_design.py  test_strategy_score.py
tests/replay_cache_glm51/: README.md
(+75 files in other folders)
