[project]
name = "evopm"
version = "0.1.0"
description = "EvoPM Agent — LangGraph 多智能体产品需求决策系统（黑客松 Demo）"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    "pydantic>=2",
    "typer>=0.12",
    "rich>=13",
    "jinja2>=3.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
evopm = "evopm.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evopm"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
